@startuml
'https://plantuml.com/class-diagram

'relations interclasses
MoteurJeu "1" --> "1" Jeu : charge
MoteurJeu "1" --> "1...*" DessinJeu : utilise
MoteurJeu "1" --> "1" Clavier : a besoin
MoteurJeu "1" --> "1...*" FrameStats : affiche
DessinJeu "1...*" --> "1" Jeu : utilise
Jeu "1" --> "1" Clavier : a besoin
Jeu "1" --> "1...*" FrameStats : affiche

'blocs de classes

class Clavier {
boolean haut;
boolean bas;
boolean gauche;
boolean droite;
appuyerTouche(KeyEvent event)
relacherTouche(KeyEvent event)
}

class FrameStats {
long frameCount;
double meanFrameInterval;
ReadOnlyStringWrapper text;
getFrameCount() : long
getMeanFrameInterval() : double
addFrame(long frameDurationNanos)
getText() : String
textProperty() : ReadOnlyStringProperty
toString() : String
}

class MoteurJeu {
double FPS;
double dureeFPS;
double WIDTH = 800;
double HEIGHT = 600;
FrameStats frameStats;
Jeu jeu = null;
DessinJeu dessin = null;
Clavier controle;
launch(Jeu jeu, DessinJeu dessin)
setFPS(int FPSsouhaitees)
setTaille(double width, double height)
start(Stage primaryStage)
startAnimation(Canvas canvas)
}

interface DessinJeu {
dessinJeu(Jeu jeu, Canvas canvas)
}

interface Jeu {
update(double secondes, Clavier clavier)
init()
etreFini() : boolean
}

@enduml